--- a/labweek11/whatchaosimaginary.html
+++ b/labweek11/whatchaosimaginary.html
@@ -9,22 +9,13 @@
 	<link href="https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- CSS for background image -->
+<!-- IM SORRY I KNOW THIS NEEDS TO GO IN STYLES.CSS BUT I DONT WANT TO CHANGE ALL THE CLASS AND ID NAMES ;( -->
+	<!-- CSS for background image -->
 	  <style>
         body {
             margin: 0;
             padding: 0;
         }
-        /*.imgbox {
-            display: grid;
-            height: 100%;
-        }*/
-        /*.backpic {
-        	position: relative;
-            max-width: 100%;
-            max-height: 100vh;
-            margin: auto;
-        }*/
 		.hoverBox {
 			font-family: 'Teko', sans-serif;
 			border-radius: 0px;
@@ -121,11 +112,7 @@
 	<!-- div for typey text -->
 </div>
 
-
-
 </body>
-
-
 <script type="text/javascript">
 		document.body.style.backgroundImage = "url('666.gif')";
 	</script>
