--- a/labweek11/begin.html
+++ b/labweek11/begin.html
@@ -78,19 +78,17 @@
 <!-- Begin book click links -->
 <div class="click-book">
 		<p><a href="index.html" style="
-			width: 10px; 
+			width: 10vh;
+			height: 100vh; 
 		    border-left: 4em solid transparent; 
 		    border-top: 12px solid #b5b8bd;
 		    top: 85%;
-		    left: 60%;
+		    left: 55%;
 		    display: inline-block;
 		    position: absolute;
 		    z-index: 4;
 		    opacity: 0;
-		    max-height: 2px;
-		    max-width: 10px;
-		    min-height: -5px;
-		    min-width: -1px;
+		
 		    ">
 		</a></p>
 		<!-- <p><a href="book2.html" target="_blank">TEMPORARY LINK 2</a></p>
